--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -2,7 +2,7 @@
 
 .heroWrapper {
   position: relative;
-  height: 300vh;
+  height: 500vh;
   width: 100%;
 }
 
